--- a/L1/childhood-disorders.html
+++ b/L1/childhood-disorders.html
@@ -110,7 +110,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -157,7 +157,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -283,6 +283,33 @@
                             <div class="services-details__img">
                                 <img src="assets/images/new-home/childhood-disorders/banner.jpg" alt="">
                             </div>
+                            <h3 class="services-details__title-1">Attention-Deficit/Hyperactivity Disorder (ADHD)</h3>
+                            <p class="services-details__text-1 mt-20">Difficulty paying attention, being hyperactive, and impulsive.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Medication, such as stimulants or non-stimulants, behavioral therapy, and support at school.</p>
+                            </div>
+                            
+                            <h3 class="services-details__title-1">Anxiety Disorders</h3>
+                            <p class="services-details__text-1 mt-20">Excessive worry or fear that affects daily life.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Therapy, such as cognitive-behavioral therapy (CBT), relaxation techniques, and medication in some cases.</p>
+                            </div>
+                            <h3 class="services-details__title-1">Depression</h3>
+                            <p class="services-details__text-1 mt-20">Feeling sad, hopeless, or irritable for a long time.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Therapy, including CBT and support from family and friends, medication like antidepressants, and lifestyle changes.</p>
+                            </div>
+                            <h3 class="services-details__title-1">Autism Spectrum Disorder (ASD)</h3>
+                            <p class="services-details__text-1 mt-20">Difficulty with social interaction, communication, and repetitive behaviors.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Behavioral therapy, speech therapy, occupational therapy, and support at school.</p>
+                            </div>
+                            <h3 class="services-details__title-1">Oppositional Defiant Disorder (ODD</h3>
+                            <p class="services-details__text-1 mt-20">Being stubborn, defiant, and disobedient towards authority figures.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Therapy, such as parent-child interaction therapy, behavior management techniques, and support at school.</p>
+                            </div>
+                            <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Note :</strong> Remember, it's important to consult with a healthcare professional to get the right diagnosis and treatment plan for your child.</p>
                             <h3 class="services-details__title-1">Childhood Psychiatric Disorders</h3>
                             <p class="services-details__text-1"><strong style="color:#50235d">Psychotherapy (“talk therapy”) :</strong> There are many different approaches to psychotherapy, including structured psychotherapies directed at specific conditions.. Effective psychotherapy for children always includes:</p>
                             <ul class="services-details__benefit-points list-unstyled mt-20">
@@ -411,7 +438,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
