--- a/L1/depression-service.html
+++ b/L1/depression-service.html
@@ -110,7 +110,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -157,7 +157,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -192,7 +192,7 @@
        <!-- Book Appoinment button ends -->
        
        <section class="page-header">
-        <div class="page-header-bg" style="background-image: url(assets/images/new/therapy\ \(5\).jpg)">
+        <div class="page-header-bg" style="background-image: url(assets/images/new-home/depresion-service/breadcrumb-banner.jpg)">
         </div>
         <div class="container">
             <div class="page-header__inner">
@@ -300,7 +300,8 @@
                                                 </div>
                                                 <h3 class="services-details__title-1">Depression</h3>
                                                 <p class="services-details__text-1">Depression is a mental health disorder characterized by persistent feelings of sadness, hopelessness, and a lack of interest or pleasure in daily activities. It can also lead to various physical and cognitive symptoms, affecting sleep, appetite, energy levels, concentration, and overall well-being. Depression is a common and treatable condition often addressed through psychotherapy, medication, or a combination of both.</p>
-                                                <h3 class="services-details__title-2">Our therapies can improve your self esteem.</h3>
+                                                <!--<h3 class="services-details__title-2">Our therapies can improve your self esteem.</h3>-->
+                                                <h3 class="services-details__title-2">Our Management can improve your self esteem.</h3>
                                                 <ul class="services-details__benefit-points list-unstyled">
                                                     <li>
                                                         <div class="icon">
@@ -489,10 +490,10 @@
                                                         <div class="col-xl-4 col-lg-4 col-md-6">
                                                             <div class="get-one__points-single">
                                                                 <div class="get-one__points-title">
-                                                                    <h4><a href="#">Sleep Disturbance</a></h4>
+                                                                    <h4><a href="#">Sleep Disturbances</a></h4>
                                                                 </div>
                                                                 <div class="get-one__points-text-box">
-                                                                    <h4><a href="#">Sleep disturbance</a></h4>
+                                                                    <h4><a href="#">Sleep disturbances</a></h4>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -780,7 +781,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
