--- a/L1/geriatric-disorders.html
+++ b/L1/geriatric-disorders.html
@@ -110,7 +110,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -157,7 +157,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -281,7 +281,7 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="services-details__right">
                             <div class="services-details__img">
-                                <img src="assets/images/new-home/childhood-disorders/banner.jpg" alt="">
+                                <img src="assets/images/new-home/geriatric-disorders/banner.jpg" alt="">
                             </div>
                             <h3 class="services-details__title-1">Dementia</h3>
                             <p class="services-details__text-1">Dementia is a term for several diseases that affect memory, thinking, and the ability to perform daily activities.</p>
@@ -648,7 +648,7 @@
                             <h3 class="services-details__title-1">Late life Depression:</h3>
                             <p class="services-details__text-1 mt-20">Late-life depression is one of the most common neuropsychiatric disorders in the elderly. Late life depression is a significant public health problem as well as a burden on patients, their families, and caregivers. There are significant associations of late life depression with medical disorders and cognitive impairment, the latter due to effects of the depression itself or association with dementia. Accurate diagnosis and treatment are of utmost importance to improve quality of life, alleviate suffering, and prevent suicide. A number of effective antidepressant medications are available; combination therapy with these medications and cognitive behavioural therapy appears most efficacious, and maintenance therapy can decrease the chances of remission.</p>
 
-                            <h3 class="services-details__title-1">Late life Depression:</h3>
+                            <h3 class="services-details__title-1">Delirium:</h3>
                             <p class="services-details__text-1 mt-20">Delirium is a state of heightened mental confusion that commonly affects older people admitted to hospital. Ninety six percent of cases are experienced by older people. When older people with dementia experience severe illness or trauma such as a hip fracture they are more at risk of delirium.</p>
                             <p class="services-details__text-1 mt-20">Delirium causes great distress to patients, families and carers and has potentially serious consequences such as increased likelihood of admission to long term care and increased mortality.</p>
                             <p class="services-details__text-1 mt-20">People who have delirium may need to stay longer in hospital or in critical care; have an increased incidence of dementia and have more hospital-acquired complications such as falls and pressure ulcers.</p>
@@ -752,7 +752,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
