--- a/L1/index.html
+++ b/L1/index.html
@@ -111,7 +111,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -158,7 +158,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -338,7 +338,7 @@
                         <div class="feature-three__single">
                             <div class="feature-three__img-box">
                                 <div class="feature-three__img">
-                                    <img src="assets/images/resources/feature-3-1.jpg" alt="">
+                                    <img src="assets/images/new-home/second-section-1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="feature-three__content">
@@ -360,18 +360,18 @@
                         <div class="feature-three__single">
                             <div class="feature-three__img-box">
                                 <div class="feature-three__img">
-                                    <img src="assets/images/resources/feature-3-2.jpg" alt="">
+                                    <img src="assets/images/new-home/second-section-2.jpg" alt="">
                                 </div>
                             </div>
                             <div class="feature-three__content">
                                 <!--<p class="feature-three__sub-title">COUPLE ISSUES</p>-->
                                 <h3 class="feature-three__title">
-                                    <a href="#">
-                                        Know more about our wellness activity
+                                    <a href="therapies.html">
+                                        Know more about our wellness activities
                                     </a>
                                 </h3>
                                 <div class="feature-three__btn">
-                                    <a href="#"><span class="icon-right-arrow"></span>More</a>
+                                    <a href="therapies.html"><span class="icon-right-arrow"></span>More</a>
                                 </div>
                             </div>
                         </div>
@@ -389,7 +389,7 @@
 
                 <div class="services-one__top">
                     <div class="row">
-                        <div class="col-xl-6 col-lg-6">
+                        <div class="col-xl-12 col-lg-12 text-center">
                             <div class="services-one__left">
                                 <div class="section-title text-left">
                                     <!--<span class="section-title__tagline">Services we’re offering</span>-->
@@ -398,13 +398,6 @@
                                         <br> Psychiatric Conditions
                                     </h2>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6">
-                            <div class="services-one__right">
-                                <p class="services-one__right-text">
-                                    Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                </p>
                             </div>
                         </div>
                     </div>
@@ -427,9 +420,9 @@
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title"><a href="#">Mood Disorders</a></h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -463,9 +456,9 @@
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title"><a href="#">Pychosis</a></h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -499,9 +492,9 @@
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title"><a href="#">Anxiety</a></h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -537,9 +530,9 @@
                                             <h3 class="feature-one__hover-title">
                                                 <a href="#">Addictions</a>
                                             </h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -575,9 +568,9 @@
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title"><a href="childhood-disorders.html">Childhood Disorders</a></h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -611,9 +604,9 @@
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title"><a href="geriatric-disorders.html">Geriatric Disorders</a></h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -647,9 +640,9 @@
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title"><a href="#">Sexual Disorders</a></h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -685,9 +678,9 @@
                                             <h3 class="feature-one__hover-title">
                                                 <a href="#">Stress & Anger</a>
                                             </h3>
-                                            <p class="feature-one__hover-text">
+                                            <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
-                                            </p>
+                                            </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
                                             <a href="why-us-sattva.html" class="feature-one__hover-arrow">
@@ -701,7 +694,7 @@
                                         <img src="assets/images/new-home/service-icon.png" />
                                     </div>
                                     <h3 class="feature-one__title">
-                                        <a href="#">Marital Discord</a>
+                                        <a href="#">Stress & Anger</a>
                                     </h3>
                                 </div>
                             </div>
@@ -804,8 +797,10 @@
                                     <!--Get One Points Single Start-->
                                     <div class="col-xl-6 col-lg-6 col-md-6">
                                         <div class="get-one__points-single">
-                                            <div class="get-one__points-icon">
-                                                <span class="icon-family-1"></span>
+                                            <div class="get-one__points-icon teenager-img">
+                                                <span class="img">
+                                                    <img src="assets/images/new-home/teenager-icon.png" />
+                                                </span>
                                             </div>
                                             <div class="get-one__points-title">
                                                 <h4><a href="#">Teenagers</a></h4>
@@ -821,8 +816,10 @@
                                     <!--Get One Points Single Start-->
                                     <div class="col-xl-6 col-lg-6 col-md-6">
                                         <div class="get-one__points-single">
-                                            <div class="get-one__points-icon">
-                                                <span class="icon-suitcase"></span>
+                                            <div class="get-one__points-icon teenager-img">
+                                                <span class="img">
+                                                    <img src="assets/images/new-home/elderly-icon.png" />
+                                                </span>
                                             </div>
                                             <div class="get-one__points-title">
                                                 <h4><a href="#">Elderly</a></h4>
@@ -877,7 +874,7 @@
                                 </a>
                                 <span>M.B.B.S | MD Psychiatry</span>
                                 <p class="member-para">
-                                    Trained in integrated management of<br> patients with multiple disorders and has<br> expertise in counseling the patient’s illness.
+                                    Trained in integrated management of patients with multiple disorders and has expertise in counseling the patient’s illness.
                                 </p>
                             </div>
                         </div>
@@ -893,8 +890,7 @@
                                 </a>
                                 <span>Doctor Designation</span>
                                 <p class="member-para">
-                                    Text Here...Text Here...Text Here...<br>Text Here...Text Here...
-                                    Text Here...<br>Text Here...Text Here...Text Here...Text Here...
+                                    An Oculoplastic surgeon, with 7 years experience in the field of eye surgery, has vast number of surgeries under his...
                                 </p>
                                 <!-- <div class="social">
                                     <a href=""><i class="fab fa-twitter team-icon"></i></a>
@@ -1138,7 +1134,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
