--- a/L1/sattva-contactus.html
+++ b/L1/sattva-contactus.html
@@ -110,7 +110,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -157,7 +157,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="section-title text-center">
                     <span class="section-title__tagline">Contact with us</span>
-                    <h2 class="section-title__title">Feel Free to Get <span>in</span> <br> Touch with us</h2>
+                    <h2 class="section-title__title">Feel Free to get <span>in</span> <br> touch with us</h2>
                 </div>
                 <div class="contact-page__form-box">
                     <form action="https://bracketweb.com/delogis-html/main-html/assets/inc/sendemail.php" class="contact-page__form contact-form-validated"
@@ -272,7 +272,7 @@
                         <ul class="list-unstyled contact-details__list">
                             <li>
                                 <div class="icon">
-                                    <span class="icon-help"></span>
+                                    <span class="icon-phone-call"></span>
                                 </div>
                                 <div class="content">
                                     <p>Have Question?</p>
@@ -294,15 +294,7 @@
                                 </div>
                                 <div class="content">
                                     <p>Visit Center</p>
-                                    <h4>66 Broklyn Golden Street. USA</h4>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="contact-details__social">
-                                    <a href="https://wa.link/jl5qi0"><i class="fab fa-whatsapp"></i></a>
-                                    
-                                    <a href="https://youtube.com/@yashikanathani6494?si=90sXz7VRKmDd5P14"><i class="fab fa-youtube"></i></a>
-                                    <a href="https://www.instagram.com/my_indfull?utm_source=qr&igsh=eHVheHgwdmVicTh3"><i class="fab fa-instagram"></i></a>
+                                    <h4>402 Epsilon Complex, Above Blue Oven ,Race Course Rd, Vadodara</h4>
                                 </div>
                             </li>
                         </ul>
@@ -371,7 +363,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
