--- a/L1/sexual-disorders.html
+++ b/L1/sexual-disorders.html
@@ -110,7 +110,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -157,7 +157,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -283,7 +283,33 @@
                             <div class="services-details__img">
                                 <img src="assets/images/new-home/sexual-disorders/banner.jpg" alt="">
                             </div>
-
+                            <p class="services-details__text-1 mt-20">Psychosexual dysfunction is a mental or emotional condition that can cause problems getting sexually aroused or feeling sexual satisfaction. Mental or emotional causes include:</p>
+                            <ul class="services-details__benefit-points list-unstyled mt-20">
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Depression</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Anxiety</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Traumatic sexual experience, such as abuse or rape</p>
+                                    </div>
+                                </li>
+                            </ul>
                             <h5 class="services-details__text-1 mt-20">Sexual dysfunctions can be classified into four categories:</h5>
 
                             <ul class="services-details__benefit-points list-unstyled mt-20">
@@ -423,41 +449,8 @@
                                 </div>
                             </div>
                             
-                            <p class="services-details__text-1 mt-20">Mental health conditions like depression, bipolar disorder, anxiety disorders, or even psychosis can also affect sexual life. These conditions can include impaired desire, arousal, or sexual satisfaction.</p>
-                            <p class="services-details__text-1 mt-20">Psychosexual dysfunction is a mental or emotional condition that can cause problems getting sexually aroused or feeling sexual satisfaction. Mental or emotional causes include:</p>
+                            <p class="services-details__text-1 mt-20">Sexual dysfunction is often treated by addressing the underlying causes, Treatments include.</p>
                             <ul class="services-details__benefit-points list-unstyled mt-20">
-                                <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Depression</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Anxiety</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Traumatic sexual experience, such as abuse or rape</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Sexual dysfunction is often treated by addressing the underlying causes. Treatments include.</p>
-                                    </div>
-                                </li>
                                 <li>
                                     <div class="icon">
                                         <span class="fa fa-check"></span>
@@ -627,7 +620,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
