--- a/L1/therapies.html
+++ b/L1/therapies.html
@@ -113,7 +113,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -160,7 +160,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -212,7 +212,7 @@
         <!--Why Choose One End-->
         <!--feature One Start-->
         <!-- Freight Services Details -->
-        <section class="tabs-one ptb-90">
+        <section class="tabs-one therapies ptb-90">
             <div class="container">
                 <div class="tabs-one__inner tabs-box">
                     <div class="tabs-one__shape-1 float-bob-x">
@@ -222,12 +222,12 @@
                         <li data-tab="#art-therapy" class="tab-btn active-btn">
                             <span>Art Therapy</span>
                         </li>
-                        <li data-tab="#techniques-for-stress-relief" class="tab-btn"><span>Techniques for Stress Relief</span></li>
+                        <li data-tab="#techniques-for-stress-relief" class="tab-btn"><span>Breathing Techniques</span></li>
                         <li data-tab="#emotional-wellness" class="tab-btn">
-                            <span>Emotional Wellness</span>
+                            <span>Journaling Techniques</span>
                         </li>
                         <li data-tab="#muscle-relaxation" class="tab-btn"><span>Muscle Relaxation</span></li>
-                        <li data-tab="#behaviour-therapy" class="tab-btn"><span>Behavioral Therapy</span></li>
+                        <li data-tab="#behaviour-therapy" class="tab-btn"><span>Cognitive Behavioral Therapy</span></li>
                     </ul>
                     <div class="tabs-content mt-20">
                         <!--tab-->
@@ -476,7 +476,7 @@
                                     <p class="services-details__text-1 mt-20">Whenever I fail to take my own advice, I narrow down my goals into a single snippet that I can manage even on my worst days. When 10 minutes of meditation felt like too much and I had problems keeping still, I cut it down to 5 minutes. I also have short guided meditations for the days I’m too tired to go alone.</p>
                                     <p class="services-details__text-1 mt-20">It doesn’t matter whether you write a single line or three pages – what matters in the beginning is that you form a habit. Make journaling a part of your daily life and anchor it to another habit – like your morning coffee or your evening washing up. And get that journaling in there until it becomes routine and automatic and until you’re no longer fighting with yourself about how badly or well you’re doing it.</p>
                                     <p class="services-details__text-1 mt-20">Writing about gratitude will lift your spirits and get your thoughts flowing again on the days you’re tired or filled with self-doubt.</p>
-                                    <h3 class="services-details__title-1">This positive energy is downright invigorating.</h3>
+                                    <p class="services-details__text-1 mt-20">This positive energy is downright invigorating.</p>
 
                                     <p class="services-details__text-1 mt-20">And it doesn’t have to be complicated. Start with what’s in front of you – your laptop or journal, the balcony or the desk with your morning coffee. Then describe your emotions in detail. Instead of trying to fill up a page with all the things you’re grateful for, try focusing on a few and really let yourself feel the emotion of gratitude</p>
 
@@ -595,10 +595,10 @@
                                     <p class="services-details__text-1 mt-20">While CBT can be helpful for many people, it does not work for everyone. If you don’t see any results after a few sessions, do not feel discouraged. Check in with your therapist.</p>
                                     <p class="services-details__text-1 mt-20">A good therapist can help you recognize when one approach is not working. They can usually recommend other approaches that might help more.</p>
                                     <h5 class="services-details__text-1 mt-20">These are some of the most popular techniques used in CBT:</h5>
-                                    <p class="services-details__text-1 mt-20"><strong style="color:#50235d">MART Goals :</strong> SMART goals are specific, measurable, achievable, realistic, and time-limited.</p>
+                                    <p class="services-details__text-1 mt-20"><strong style="color:#50235d">SMART Goals :</strong> SMART goals are specific, measurable, achievable, realistic, and time-limited.</p>
 
                                     <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Guided discovery and questioning :</strong> By questioning the assumptions you have about yourself or your current situation, your therapist can help you learn to challenge these thoughts and consider different viewpoints.</p>
-                                    <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Ournaling :</strong> You might be asked to jot down negative beliefs that come up during the week and the positive ones you can replace them with.</p>
+                                    <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Journaling :</strong> You might be asked to jot down negative beliefs that come up during the week and the positive ones you can replace them with.</p>
                                     <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Self-talk :</strong> Your therapist may ask what you tell yourself about a certain situation or experience and challenge you to replace negative or critical self-talk with compassionate, constructive self-talk.</p>
                                     <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Cognitive Restructuring :</strong> This involves looking at any cognitive distortions affecting your thoughts — such as black-and-white thinking, jumping to conclusions, or catastrophizing — and beginning to unravel them.</p>
                                     <p class="services-details__text-1 mt-20"><strong style="color:#50235d">Thought Recording :</strong> In this techniqueTrusted Source, you’ll record thoughts and feelings experienced during a specific situation, then come up with unbiased evidence supporting your negative belief and evidence against it. You’ll use this evidence to develop a more realistic thought.</p>
@@ -699,7 +699,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
