--- a/L1/pyshosis.html
+++ b/L1/pyshosis.html
@@ -110,7 +110,7 @@
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                            <li><a href="sattva-contactus.html">Contact</a></li>
+                                            <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                     <div class="main-menu__top-right">
@@ -157,7 +157,7 @@
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
-                                                <a href="sattva-contactus.html">Contact</a>
+                                                <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -190,7 +190,7 @@
         <!-- Book Appoinment button ends -->
 
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/new/therapy\ \(5\).jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/new-home/pyshosis/breadcrumb-image.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -477,7 +477,7 @@
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
                                     <li><a href="sattva-testimonial.html">Testimonial</a></li>
-                                    <li><a href="sattva-contactus.html">Contact</a></li>
+                                    <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
